Implemented paper.js

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Battle</title>
     <style src="style.css"></style>
-    <script src="script.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.11/paper-full.min.js"></script>
+    <script type="text/paperscript" src="script.js"></script> 
 </head>
 
-<body onload="startGame()">
-    <canvas id="canvas" width="855" height="480"></canvas>
+<body>
+    <canvas id="canvas"></canvas>
     <p id="score"></p>
 </body>
 </html>
