It's still broken... only know I have even less of an idea why

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Battle</title>
     <style src="style.css"></style>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.11/paper-full.min.js"></script>
-    <script type="text/paperscript" src="script.js" canvas="canvas" ></script> 
+    <script type="text/javascript" src="script/paper/docs/assets/js/paper.js"></script>
+    <script type="text/paperscript" src="script/script.js" canvas="canvas" ></script> 
 </head>
 
 <body>
