--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Space Battle</title>
     <style src="style.css"></style>
     <script type="text/javascript" src="script/paper/docs/assets/js/paper.js"></script>
-    <script type="text/paperscript" src="script/script.js" canvas="canvas" ></script> 
+    <script type="text/javascript" src="script/script.js" canvas="canvas" ></script> 
 </head>
 
 <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="855px" height="480px";></canvas>
     <p id="score"></p>
 </body>
 </html>
