--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Battle</title>
-    <style src="style.css"></style>
+    <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="script/paper/docs/assets/js/paper.js"></script>
     <script type="text/javascript" src="script/script.js" canvas="canvas" ></script> 
 </head>
 
 <body>
-    <canvas id="canvas" width="855px" height="480px";></canvas>
-    <p id="score"></p>
+    <p id="scoreboard">score <span id="score"></span></p>
+    <canvas id="canvas"></canvas>
 </body>
 </html>
