Start button implemented

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
         xxxxxxxxxx <span id="scoreBoardEntry5"></span><br>
     </p>
     <canvas id="canvas"></canvas>
+    <button>
+        <span> Start </span>
+    </button>
 </body>
 </html>
