Some minor tweaks to the Scoreboard

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Space Battle</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="script/paper/docs/assets/js/paper.js"></script>
-    <script type="text/javascript" src="script/script.js" canvas="canvas" ></script> 
+    <script type="text/javascript" src="script/script.js" canvas="canvas"></script> 
 </head>
 
 <body>
     <p id="scoredisplay">score <span id="score"></span></p>
     <p id="scoreBoard">
-        xxxxxxxxxx <span id="scoreBoardEntry1"></span><br>
+        <span id="scoreBoardEntry1"></span><br>
         xxxxxxxxxx <span id="scoreBoardEntry2"></span><br>
         xxxxxxxxxx <span id="scoreBoardEntry3"></span><br>
         xxxxxxxxxx <span id="scoreBoardEntry4"></span><br>
