--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <p id="scoredisplay">score <span id="score"></span></p>
     <p id="scoreBoard">
-        <span id="scoreBoardEntry1"></span><br>
+        <span id="scoreName"></span><span id="scoreBoardEntry1"></span><br>
         xxxxxxxxxx <span id="scoreBoardEntry2"></span><br>
         xxxxxxxxxx <span id="scoreBoardEntry3"></span><br>
         xxxxxxxxxx <span id="scoreBoardEntry4"></span><br>
