--- a/game.html
+++ b/game.html
@@ -12,11 +12,11 @@
 <body>
     <p id="scoredisplay">score <span id="score"></span></p>
     <p id="scoreBoard">
-        <span id="scoreName"></span><span id="scoreBoardEntry1"></span><br>
-        xxxxxxxxxx <span id="scoreBoardEntry2"></span><br>
-        xxxxxxxxxx <span id="scoreBoardEntry3"></span><br>
-        xxxxxxxxxx <span id="scoreBoardEntry4"></span><br>
-        xxxxxxxxxx <span id="scoreBoardEntry5"></span><br>
+        player 1 <span id="scoreBoardEntry1"></span><br>
+        Player 2 <span id="scoreBoardEntry2"></span><br>
+        Player 3 <span id="scoreBoardEntry3"></span><br>
+        Player 4 <span id="scoreBoardEntry4"></span><br>
+        Player 5 <span id="scoreBoardEntry5"></span><br>
     </p>
     <canvas id="canvas"></canvas>
     <button>
