Continued work on the Scoreboard
Trying to get names to work. Very unfinished, very broken.

--- a/game.html
+++ b/game.html
@@ -12,15 +12,16 @@
 <body>
     <p id="scoredisplay">score <span id="score"></span></p>
     <p id="scoreBoard">
-        player 1 <span id="scoreBoardEntry1"></span><br>
-        Player 2 <span id="scoreBoardEntry2"></span><br>
-        Player 3 <span id="scoreBoardEntry3"></span><br>
-        Player 4 <span id="scoreBoardEntry4"></span><br>
-        Player 5 <span id="scoreBoardEntry5"></span><br>
+        <span id="playerName1"></span> <span id="scoreBoardEntry1"></span><br>
+        <span id="playerName2"></span> <span id="scoreBoardEntry2"></span><br>
+        <span id="playerName3"></span> <span id="scoreBoardEntry3"></span><br>
+        <span id="playerName4"></span> <span id="scoreBoardEntry4"></span><br>
+        <span id="playerName5"></span> <span id="scoreBoardEntry5"></span><br>
     </p>
     <canvas id="canvas"></canvas>
     <button>
         <span> Start </span>
     </button>
+    <input type="text" id="playerNameInput" style="display: none;">
 </body>
 </html>
